src/geovision/static/styles.css
body, html {
    background-color: #E6F2EA;
    height: 100%;
}
div#loader{
    position:absolute;
    top:0px;
    left:0px;
    z-index:100;
    background-color: #ACC2B3;
    width:100%;
    height:60%;
    text-align: center;
    padding-top: 20%;
}
div.greenbox{
    position:relative;
    background-color:#ACC2B3;
    border: solid 3px #265434;
    margin-left:auto;
    margin-right:auto;
    margin-top:60px;
    padding:25px;
    color:#0C1F02;
    font-family:Arial;
    text-align:center;
}
div#login{
    width:230px;
    height:100px;
}
div#register{
    width:400px;
}
#register p{
    margin:5px;
}
#login h2{
    font-size:20px;
    margin-bottom:5px;
}
a#register{
    position:absolute;
    top:126px;
    left:10px;
}
table#registerform{
    margin:auto;
}
input#register{
    margin-top: 10px;
}
a#back{
    float:left;
}
a#about{
    position:absolute;
    top:126px;
    left:226px;
}
div.error{
    font-family: Arial;
    margin-top:10px;
    font-weight: bold;
    color:red;
    margin-left:auto;
    margin-right:auto;
    text-align: center;
    width: 400px;
    z-index:20;
    position:relative;
}

/*UPPER NAVIGATION*/

/* Easy Clearing on - http://www.positioniseverything.net/easyclearing.html */
    .clearafter:after {
      content: '[DO NOT LEAVE IT IS NOT REAL]';
      display: block;
      height: 0;
      clear: both;
      visibility: hidden;
    }
    /*\*/
    * html .clearafter {
      height: 1%;
    }
    /* */
    /* Easy Clearing off */
A:link {color:#0C1F02; text-decoration:none;}
A:visited {color:#0C1F02; text-decoration:none;}
A:active {color:#0C1F02; text-decoration:none;}
A:hover {color:#08C444; text-decoration:underline;}

div#staticnavi{
    z-index: 1;
    width:100%;
    /*background-color:#ACC2B3;*/
    margin:0px 0px 0px 10px;
    padding:0px;
}
#staticnavi ul{
    list-style: none;
    padding: 0px;
    margin: 0px;
}
#staticnavi li{
    float: left;
    padding: 3px;
    background-color:#7EC294;
    border: 2px solid #265434;
    margin-right:4px;
}
#staticnavi li a {
/*background: url(background.gif) #fff bottom left repeat-x;*/
    height: 18px;
    line-height: 18px;
    float: left;
    width: 50px;
    display: block;
    text-decoration: none;
    text-align: center;
}
li#last{
    float:right;
}
div#graphnavi{
    position: fixed;
    top: 0px;
    left: 0px;
    padding-top: 20px;
    z-index: 10;
    width:7px;
    height:100%;
    background-image: url(images/navitausta.png);
}
div#graphnavi *{
    display: none;
}
div#graphnavi #optiontag {
    position: fixed;
    top: 30px;
    left: 7px;
    display: block;
}
div#close{
    float:right;
    font-size:20px;
    cursor: pointer;
}
.submitForm{
	cursor: pointer;
}
div#alignment{
	font-family: Courier, Consolas, 'Andale Mono', 'Everson Mono', Fixedsys, Hyperfont, Inconsolata, 'Lucida Console', Monaco, 'Pro Font';/*must be a monospace font for this to work*/
	background-color: #E6F2EA;
	font-size: 16px;
	width: 1000px;
	height: 1px;
	position: relative;
	overflow: auto;
}
div#closealign{
	text-align: right;
	font-size: 10px;
	cursor: pointer;
}

